--- a/index.html
+++ b/index.html
@@ -9,13 +9,33 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
-        <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
-            
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao ativo">Estudar para vestibular</button>
+                <button class="botao">Criar um plano de estudo</button>
+                <button class="botao">Criar uma meta de horarios</button>
+                <button class="botao">Realizar plano de materia</button>
+            </div>
+            <div class="abas-textos">
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Estudar todas as meterias bases</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Realizar provas antigas</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Realizar todos os vestibulares</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+                <div class="aba-conteudo">
+                    <h3 class="aba-conteudo-titulo-principal">Ingressar na faculdade</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                </div>
+            </div>
         </div>
+        
 </section>
 <script src="main.js"></script>
 </body>
