--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Estudar todas as meterias bases</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-                    <div class="contador"></div>
+                    <div class="contador">
+                        <div class="contador">
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">dias</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">horas</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">min</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">seg</p>
+                            </div>
+                        </div>                        
+                    </div>
                 </div>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Realizar provas antigas</h3>
